--- a/bio/index.html
+++ b/bio/index.html
@@ -78,5 +78,6 @@
   <script>
     feather.replace()
   </script>
+  <script data-goatcounter="https://phivk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
