--- a/now/index.html
+++ b/now/index.html
@@ -10,10 +10,10 @@
   <div class="pa3 pa4-m pa6-l pb4-l">
     <header class="f7">
       <nav class="f6">
-        <a class="link dim dark-green dib mr3 mb3" href="./" title="home">
+        <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
           <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
         </a>
-        <a class="link dim dark-green dib mr3 mb3" href="./now" title="home">
+        <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
           <i class="v-mid" data-feather="sun"></i> <span class="v-mid">now</span>
         </a>
       </nav>
