add mastodon to footer and format code

--- a/bio/index.html
+++ b/bio/index.html
@@ -1,64 +1,142 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>bio · Philo van Kemenade</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-</head>
-<body class="sans-serif dark-gray bg-washed-green">
-  <div class="pa3 pa4-m pa6-l pb4-l">
-    <header class="f7">
-      <nav class="f6">
-        <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
-          <i class="v-mid" data-feather="home"></i> <span class="v-mid">home</span>
+  <head>
+    <title>bio · Philo van Kemenade</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+  </head>
+  <body class="sans-serif dark-gray bg-washed-green">
+    <div class="pa3 pa4-m pa6-l pb4-l">
+      <header class="f7">
+        <nav class="f6">
+          <a class="link dim dark-green dib mr3 mb3" href="/" title="home">
+            <i class="v-mid" data-feather="home"></i>
+            <span class="v-mid">home</span>
+          </a>
+          <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
+            <i class="v-mid" data-feather="sun"></i>
+            <span class="v-mid">now</span>
+          </a>
+        </nav>
+      </header>
+      <main>
+        <h1>bio pack</h1>
+        <div>
+          <h2>blurb</h2>
+          <p class="measure">
+            Philo van Kemenade creates tools, stories and things in between to
+            amplify human connection with arts and culture. He works on
+            innovative user interfaces for audiovisual collections at the
+            Netherlands Institute for Sound and Vision. Philo co-founded the
+            digital arts & culture festival Sensorium and is initiator of the
+            Storytellers United network. He has a keen interest in learning and
+            human-centered futures of education.
+          </p>
+          <h2>pics</h2>
+          <img
+            class="w5"
+            src="./img/philo_van_kemenade.jpg"
+            alt="Headshot Philo van Kemenade"
+          />
+          <img
+            class="w5"
+            src="./img/philo_van_kemenade-bw.jpg"
+            alt="Headshot Philo van Kemenade in black and white"
+          />
+          <img
+            class="w5"
+            src="./img/philo_van_kemenade-hackathon.jpg"
+            alt="Philo van Kemenade at SNG Hackathon"
+          />
+        </div>
+      </main>
+      <footer class="pt5 f7">
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://twitter.com/phivk"
+          title="twitter"
+        >
+          <i class="v-mid" data-feather="twitter"></i>
+          <span class="v-mid">twitter</span>
         </a>
-        <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
-          <i class="v-mid" data-feather="sun"></i> <span class="v-mid">now</span>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://c.im/@Phivk"
+          title="mastodon"
+        >
+          <i class="v-mid" data-feather="at-sign"></i>
+          <span class="v-mid">mastodon</span>
         </a>
-      </nav>
-    </header>
-    <main>
-      <h1>bio pack</h1>
-      <div>
-        <h2>blurb</h2>
-        <p class="measure">
-          Philo van Kemenade creates tools, stories and things in between to amplify human connection with arts and culture. He works on innovative user interfaces for audiovisual collections at the Netherlands Institute for Sound and Vision. Philo co-founded the digital arts & culture festival Sensorium and is initiator of the Storytellers United network. He has a keen interest in learning and human-centered futures of education.
-        </p>
-        <h2>pics</h2>
-          <img class="w5" src="./img/philo_van_kemenade.jpg" alt="Headshot Philo van Kemenade">
-          <img class="w5" src="./img/philo_van_kemenade-bw.jpg" alt="Headshot Philo van Kemenade in black and white">
-          <img class="w5" src="./img/philo_van_kemenade-hackathon.jpg" alt="Philo van Kemenade at SNG Hackathon">
-      </div>
-    </main>
-    <footer class="pt5 f7">
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://twitter.com/phivk" title="twitter">
-        <i class="v-mid" data-feather="twitter"></i> <span class="v-mid">twitter</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://github.com/phivk/" title="github">
-        <i class="v-mid" data-feather="github"></i> <span class="v-mid">github</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://medium.com/@phivk" title="medium">
-        <i class="v-mid" data-feather="edit"></i> <span class="v-mid">medium</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://slides.com/phivk/" title="slides">
-        <i class="v-mid" data-feather="image"></i> <span class="v-mid">slides</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="http://are.na/philo-van-kemenade/" title="are.na">
-        <i class="v-mid" data-feather="bookmark"></i> <span class="v-mid">are.na</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://vimeo.com/phivk" title="vimeo">
-        <i class="v-mid" data-feather="youtube"></i> <span class="v-mid">vimeo</span>
-      </a>
-      <a class="link dim dark-green dib mr3 mb3" target="_blank" href="https://www.linkedin.com/in/philovk/" title="linkedin">
-        <i class="v-mid" data-feather="linkedin"></i> <span class="v-mid">linkedin</span>
-      </a>
-    </footer>
-  </div>
-  
-  <script>
-    feather.replace()
-  </script>
-  <script data-goatcounter="https://phivk.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-</body>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://github.com/phivk/"
+          title="github"
+        >
+          <i class="v-mid" data-feather="github"></i>
+          <span class="v-mid">github</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://medium.com/@phivk"
+          title="medium"
+        >
+          <i class="v-mid" data-feather="edit"></i>
+          <span class="v-mid">medium</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://slides.com/phivk/"
+          title="slides"
+        >
+          <i class="v-mid" data-feather="image"></i>
+          <span class="v-mid">slides</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="http://are.na/philo-van-kemenade/"
+          title="are.na"
+        >
+          <i class="v-mid" data-feather="bookmark"></i>
+          <span class="v-mid">are.na</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://vimeo.com/phivk"
+          title="vimeo"
+        >
+          <i class="v-mid" data-feather="youtube"></i>
+          <span class="v-mid">vimeo</span>
+        </a>
+        <a
+          class="link dim dark-green dib mr3 mb3"
+          target="_blank"
+          href="https://www.linkedin.com/in/philovk/"
+          title="linkedin"
+        >
+          <i class="v-mid" data-feather="linkedin"></i>
+          <span class="v-mid">linkedin</span>
+        </a>
+      </footer>
+    </div>
+
+    <script>
+      feather.replace();
+    </script>
+    <script
+      data-goatcounter="https://phivk.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
+  </body>
 </html>
