--- a/bio/index.html
+++ b/bio/index.html
@@ -69,6 +69,7 @@
           target="_blank"
           href="https://c.im/@Phivk"
           title="mastodon"
+          rel="me"
         >
           <i class="v-mid" data-feather="at-sign"></i>
           <span class="v-mid">mastodon</span>
