add projects page

--- a/bio/index.html
+++ b/bio/index.html
@@ -17,9 +17,21 @@
             <i class="v-mid" data-feather="home"></i>
             <span class="v-mid">home</span>
           </a>
-          <a class="link dim dark-green dib mr3 mb3" href="/now" title="home">
+          <a
+            class="link dim dark-green dib mr3 mb3"
+            href="/now"
+            title="what I'm doing now"
+          >
             <i class="v-mid" data-feather="sun"></i>
             <span class="v-mid">now</span>
+          </a>
+          <a
+            class="link dim dark-green dib mr3 mb3"
+            href="/projects"
+            title="projects"
+          >
+            <i class="v-mid" data-feather="zap"></i>
+            <span class="v-mid">projects</span>
           </a>
         </nav>
       </header>
